
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int (* pZwQuerySystemInformation ) (int,int *,int,int ) ;
typedef int ULONG ;
typedef int * PVOID ;
typedef int LONG ;
typedef int HMODULE ;


 int GetModuleHandle (char*) ;
 int GetProcAddress (int ,char*) ;
 int free (int *) ;
 int * malloc (int) ;

PVOID GetInfoTable(ULONG ATableType)
{
ULONG mSize = 0x4000;
PVOID mPtr = ((void*)0);
LONG status;
HMODULE hlib = GetModuleHandle("ntdll.dll");
pZwQuerySystemInformation ZwQuerySystemInformation = (pZwQuerySystemInformation)GetProcAddress(hlib , "ZwQuerySystemInformation");
do
{
mPtr = malloc(mSize);
if (mPtr)
{

 status = ZwQuerySystemInformation(ATableType , mPtr , mSize , 0 );
}
else
{
return ((void*)0);
}
if (status == 0xc0000004)
{
free(mPtr);
mSize = mSize * 2;
}
} while (status == 0xc0000004);
if (status == 0)
{
return mPtr;
}
free(mPtr);
return ((void*)0);
}
