; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_26950.c_GetInfoTable.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_26950.c_GetInfoTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"ntdll.dll\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"ZwQuerySystemInformation\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetInfoTable(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32 (i32, i32*, i32, i32)*, align 8
  store i32 %0, i32* %3, align 4
  store i32 16384, i32* %4, align 4
  store i32* null, i32** %5, align 8
  %9 = call i32 @GetModuleHandle(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = call i32 @GetProcAddress(i32 %10, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %12 = sext i32 %11 to i64
  %13 = inttoptr i64 %12 to i32 (i32, i32*, i32, i32)*
  store i32 (i32, i32*, i32, i32)* %13, i32 (i32, i32*, i32, i32)** %8, align 8
  br label %14

14:                                               ; preds = %35, %1
  %15 = load i32, i32* %4, align 4
  %16 = call i32* @malloc(i32 %15)
  store i32* %16, i32** %5, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %14
  %20 = load i32 (i32, i32*, i32, i32)*, i32 (i32, i32*, i32, i32)** %8, align 8
  %21 = load i32, i32* %3, align 4
  %22 = load i32*, i32** %5, align 8
  %23 = load i32, i32* %4, align 4
  %24 = call i32 %20(i32 %21, i32* %22, i32 %23, i32 0)
  store i32 %24, i32* %6, align 4
  br label %26

25:                                               ; preds = %14
  store i32* null, i32** %2, align 8
  br label %46

26:                                               ; preds = %19
  %27 = load i32, i32* %6, align 4
  %28 = icmp eq i32 %27, -1073741820
  br i1 %28, label %29, label %34

29:                                               ; preds = %26
  %30 = load i32*, i32** %5, align 8
  %31 = call i32 @free(i32* %30)
  %32 = load i32, i32* %4, align 4
  %33 = mul nsw i32 %32, 2
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %29, %26
  br label %35

35:                                               ; preds = %34
  %36 = load i32, i32* %6, align 4
  %37 = icmp eq i32 %36, -1073741820
  br i1 %37, label %14, label %38

38:                                               ; preds = %35
  %39 = load i32, i32* %6, align 4
  %40 = icmp eq i32 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %38
  %42 = load i32*, i32** %5, align 8
  store i32* %42, i32** %2, align 8
  br label %46

43:                                               ; preds = %38
  %44 = load i32*, i32** %5, align 8
  %45 = call i32 @free(i32* %44)
  store i32* null, i32** %2, align 8
  br label %46

46:                                               ; preds = %43, %41, %25
  %47 = load i32*, i32** %2, align 8
  ret i32* %47
}

declare dso_local i32 @GetModuleHandle(i8*) #1

declare dso_local i32 @GetProcAddress(i32, i8*) #1

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
